# cf-publish

./: CHANGELOG.md  DESIGN.md  README.ja.md  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/form-worker/: .gitignore  README.md  deploy.py  worker.js
src/cf_publish/: __init__.py  cli.py  pages.py  r2.py
tests/: test_cli.py  test_collect.py  test_deploy.py  test_hash.py  test_r2.py
