[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cf-publish"
version = "0.2.0"
description = "Deploy a local folder to Cloudflare Pages via the Direct Upload API — no wrangler, no npm."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "aiseed-dev" }]
keywords = ["cloudflare", "pages", "deploy", "static-site", "direct-upload"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Build Tools",
]
dependencies = ["httpx>=0.27", "blake3>=0.4"]

[project.urls]
Homepage = "https://github.com/aiseed-dev/cf-publish"
Repository = "https://github.com/aiseed-dev/cf-publish"
Changelog = "https://github.com/aiseed-dev/cf-publish/blob/main/CHANGELOG.md"

[project.scripts]
cf-publish = "cf_publish.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/cf_publish"]
